include/altdss/capi/dss.h

    /*! 
    Delivers the number of CPUs on the current PC
    */
    ALTDSS_CAPI_DLL int32_t Parallel_Get_NumCPUs(void);
    /*! 
    Delivers the number of Cores of the local PC
    */
    ALTDSS_CAPI_DLL int32_t Parallel_Get_NumCores(void);
    /*! 
    Gets the ID of the Active Actor
    */
    ALTDSS_CAPI_DLL int32_t Parallel_Get_ActiveActor(void);
    /*! 
    Sets the Active Actor
    */
    ALTDSS_CAPI_DLL void Parallel_Set_ActiveActor(int32_t Value);
    /*!
    Create a new actor, if there are still cores available.    
    */
    ALTDSS_CAPI_DLL void Parallel_CreateActor(void);
    /*! 
    Gets the CPU of the Active Actor
    */
    ALTDSS_CAPI_DLL int32_t Parallel_Get_ActorCPU(void);
    /*! 
    Sets the CPU for the Active Actor
    */
    ALTDSS_CAPI_DLL void Parallel_Set_ActorCPU(int32_t Value);
    /*! 
    Gets the number of Actors created
    */
    ALTDSS_CAPI_DLL int32_t Parallel_Get_NumOfActors(void);
    /*!
    Suspends the host's thread until all the OpenDSS running jobs finish.
    */
    ALTDSS_CAPI_DLL void Parallel_Wait(void);
    /*! 
    Gets the progress of all existing actors in pct
    */
    ALTDSS_CAPI_DLL void Parallel_Get_ActorProgress(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Parallel_Get_ActorProgress but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Parallel_Get_ActorProgress_GR(void);
    /*! 
    Gets the status of each actor
    */
    ALTDSS_CAPI_DLL void Parallel_Get_ActorStatus(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Parallel_Get_ActorStatus but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Parallel_Get_ActorStatus_GR(void);
    /*! 
    Sets ON/OFF (1/0) Parallel features of the Engine
    */
    ALTDSS_CAPI_DLL int32_t Parallel_Get_ActiveParallel(void);
    /*! 
    Delivers if the Parallel features of the Engine are Active
    */
    ALTDSS_CAPI_DLL void Parallel_Set_ActiveParallel(int32_t Value);
    /*! 
    Reads the values of the ConcatenateReports option (1=enabled, 0=disabled)
    */
    ALTDSS_CAPI_DLL int32_t Parallel_Get_ConcatenateReports(void);
    /*! 
    Enable/Disable (1/0) the ConcatenateReports option for extracting monitors data
    */
    ALTDSS_CAPI_DLL void Parallel_Set_ConcatenateReports(int32_t Value);